[project]
name = "llm-universal-stego"
version = "0.1.0"
description = "Does some universal steganography with LLMs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.11.0",
    "blessed>=1.23.0",
    "colorama>=0.4.6",
    "llama-cpp-python>=0.3.16",
    "pymonocypher>=4.0.2.5",
    "transformers>=4.57.1",
]
